# EIML

./: .gitignore  README.md  pyproject.toml
experiments/: README.md
src/eiml/: __init__.py  cli.py  config.py  config.yaml  descriptor.py  identity.py  io_structures.py  params.py  save.py  weights.py
src/eiml/models/: __init__.py  sgpr.py
test/: README.md  compare.py  config_eiml.yaml  config_eiml_scaled.yaml  config_soap.yaml  config_soap_scaled.yaml  eiml.yaml  soap.yaml  water.xyz  water_scaled.xyz
